--- a/404.html
+++ b/404.html
@@ -113,7 +113,7 @@
             </a>
 
             <a href="get-started.html" class="block w-full px-8 py-4 border-2 border-brand-wood text-brand-wood hover:bg-brand-wood hover:text-white rounded-xl font-semibold transition-all">
-                Sell Your Home
+                Get Housing Support
             </a>
         </div>
 
