--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Properties 4 Creations - Veteran Housing Mission</title>
-    <meta name="description" content="Learn about Properties 4 Creation's mission to provide ethical, affordable housing for veterans and families. Veteran-owned and operated with Section 8 expertise.">
+    <meta name="description" content="Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium renovations, and community impact.">
     <link rel="canonical" href="https://properties4creations.com/about.html">
     <link rel="stylesheet" href="css/design-tokens.css">
     <link rel="stylesheet" href="css/components.css">
@@ -35,15 +35,19 @@
     </script>
 </head>
 <body class="bg-brand-beige">
+    <!-- Accessibility: Skip to main content -->
+    <a href="#main" class="skip-to-content">Skip to main content</a>
     <div id="header-container"></div>
 
     <main class="pt-2">
-        <section class="page-title-banner">
-            <div class="max-w-6xl mx-auto px-4">
-                <h1>Our Mission <span class="block text-brand-wood">Serving Veterans</span></h1>
-                <div class="mt-6 max-w-3xl mx-auto">
-                    <p class="text-lg md:text-xl text-slate-200 leading-relaxed">
-                        We're dedicated to transforming the housing experience for veterans through transparency, fair pricing, and unparalleled renovation quality.
+        <section class="page-title-banner hero">
+            <div class="banner-content">
+                <div class="max-w-6xl mx-auto px-4 text-center">
+                    <h1 class="text-4xl md:text-5xl font-heading font-bold text-white drop-shadow-lg">
+                        Affordable Homes for Families & Veterans in East Texas
+                    </h1>
+                    <p class="text-lg text-slate-200 leading-relaxed mt-6 max-w-3xl mx-auto">
+                        We're dedicated to transforming the housing experience for East Texas veterans through transparency, fair pricing, and unparalleled renovation quality. Veteran-owned, veteran-focused.
                     </p>
                 </div>
             </div>
