--- a/get-started.html
+++ b/get-started.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sell Your Home for Purpose | Properties 4 Creations</title>
-    <meta name="description" content="Turn your home sale into a meaningful contribution to veteran housing. Fair cash offers, no realtor fees, and help veterans find their sanctuary.">
+    <meta name="description" content="Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium renovations, and community impact.">
 
     <!-- Design System CSS (MUST be first) -->
     <link rel="stylesheet" href="css/design-tokens.css">
@@ -149,7 +149,8 @@
     </style>
 </head>
 <body class="bg-brand-beige">
-    <!-- Header Container -->
+    <!-- Accessibility: Skip to main content -->
+    <a href="#main" class="skip-to-content">Skip to main content</a>
     <div id="header-container"></div>
 
     <!-- Main Content -->
