--- a/impact.html
+++ b/impact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Impact & Family Success Stories - Properties 4 Creations</title>
-    <meta name="description" content="Real families, real sanctuaries. Stories of veteran housing success and community impact. See how fair housing solutions create lasting change.">
+    <meta name="description" content="Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium renovations, and community impact.">
     <link rel="canonical" href="https://properties4creations.com/impact.html">
 
     <!-- Design System CSS (MUST be first) -->
@@ -48,6 +48,8 @@
     </style>
 </head>
 <body class="bg-brand-beige">
+    <!-- Accessibility: Skip to main content -->
+    <a href="#main" class="skip-to-content">Skip to main content</a>
     <!-- Header -->
     <div id="header-container"></div>
 
