--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Premium Affordable Housing For Families and Veterans | Properties 4 Creations</title>
-    <meta name="description" content="Enterprise-grade veteran housing solutions with Section 8 ready properties. Fair market cash offers, professional renovations, and veteran priority access. 42+ veterans housed nationwide. Tyler, Longview, Jefferson areas.">
+    <meta name="description" content="Affordable housing solutions for families and veterans using vouchers. East Texas homes built with trust, dignity, and transformation. Fair market cash offers, professional renovations.">
     <link rel="canonical" href="https://properties4creations.com/">
 
     <!-- Additional SEO Meta Tags -->
@@ -263,7 +263,7 @@
 
             <h1 class="text-3xl md:text-5xl lg:text-6xl font-heading font-bold mb-6 leading-tight text-brand-navy">
                 East Texas Homes Built for
-                <span class="text-brand-wood block mt-2">Dignity, Trust, and Transformation</span>
+                <span class="text-brand-wood block mt-2">Affordable Homes for Families & Veterans</span>
             </h1>
 
             <p class="text-lg md:text-xl text-slate-600 mb-8 font-light leading-relaxed">
