--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Properties 4 Creations - Veteran Housing Properties</title>
-    <meta name="description" content="Discover fair cash offers and quality renovations for veteran housing. Section 8 ready properties with veteran priority pricing.">
+    <meta name="description" content="Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium renovations, and community impact.">
     <link rel="canonical" href="https://properties4creations.com/projects.html">
 
     <link rel="stylesheet" href="css/design-tokens.css">
@@ -27,15 +27,19 @@
     </script>
 </head>
 <body class="bg-brand-beige">
+    <!-- Accessibility: Skip to main content -->
+    <a href="#main" class="skip-to-content">Skip to main content</a>
     <div id="header-container"></div>
 
     <main class="pt-2">
-        <section class="page-title-banner">
-            <div class="max-w-6xl mx-auto px-4">
-                <h1>Veteran Housing <span class="block text-brand-wood">With Fair Cash Offers</span></h1>
-                <div class="mt-6 max-w-3xl mx-auto">
-                    <p class="text-lg md:text-xl text-slate-200 leading-relaxed">
-                        We provide fair market value offers and professional renovations for veterans. No hidden fees, no pressure tactics - just honest housing solutions.
+        <section class="page-title-banner hero">
+            <div class="banner-content">
+                <div class="max-w-6xl mx-auto px-4 text-center">
+                    <h1 class="text-4xl md:text-5xl font-heading font-bold text-white drop-shadow-lg">
+                        Affordable Homes for Families & Veterans in East Texas
+                    </h1>
+                    <p class="text-lg text-slate-200 leading-relaxed mt-6 max-w-3xl mx-auto">
+                        Discover East Texas homes transformed for veterans and families. Fair market value offers, professional renovations, and honest housing solutions with transparency you can trust.
                     </p>
                 </div>
             </div>
@@ -105,7 +109,7 @@
                                             <span class="font-semibold text-brand-navy">${prop.bathrooms}</span> Bath •
                                             <span class="font-semibold text-brand-navy">${prop.sqft}</span> sqft
                                         </div>
-                                        <a href="contact.html" class="px-6 py-2.5 bg-white border-2 border-brand-navy text-brand-navy rounded-lg text-sm font-bold hover:bg-brand-navy hover:text-white transition-all">Schedule Visit</a>
+                                        <a href="contact.html" class="btn-base btn-secondary btn-sm">Schedule Visit</a>
                                     </div>
                                 </div>
                             </article>
