--- a/transparency.html
+++ b/transparency.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renovation Standards & Trust Signals | Properties 4 Creation</title>
-    <meta name="description" content="Complete renovation standards checklist for veteran housing. View our certified trust signals, Section 8 compliance, and quality assurance measures for safe, beautiful homes.">
+    <meta name="description" content="Affordable housing solutions for families and veterans using vouchers. East Texas homes built with trust, dignity, and transformation. Fair market cash offers, professional renovations.">
 
     <!-- Design System CSS (MUST be first) -->
     <link rel="stylesheet" href="css/design-tokens.css">
@@ -150,19 +150,15 @@
 
     <!-- Main Content -->
     <main class="pt-2">
-        <!-- Page Title Banner -->
-        <section class="page-title-banner">
-            <div class="max-w-6xl mx-auto px-4">
-                <h1>Quality Standards & <span class="block text-brand-wood">Total Transparency</span></h1>
-                <div class="mt-6 max-w-3xl mx-auto">
-                    <p class="text-lg md:text-xl text-slate-200 leading-relaxed">
-                        Every property we renovate meets rigorous standards designed specifically for veterans and families.
-                        We believe in complete transparency so you can trust every detail of your new home.
+        <section class="page-title-banner hero">
+            <div class="banner-content">
+                <div class="max-w-6xl mx-auto px-4 text-center">
+                    <h1 class="text-4xl md:text-5xl font-heading font-bold text-white drop-shadow-lg">
+                        Our Process <span class="block text-brand-wood">Built on Trust & Clarity</span>
+                    </h1>
+                    <p class="text-lg text-slate-200 leading-relaxed mt-6 max-w-3xl mx-auto">
+                        Every property we renovate meets rigorous East Texas standards designed specifically for veterans and families. Complete transparency ensures you can trust every detail of your new home.
                     </p>
-                    <div class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-white/10 backdrop-blur-md border border-white/20 mt-6">
-                        <span class="w-3 h-3 rounded-full bg-green-500 animate-pulse"></span>
-                        <span class="text-green-100 font-semibold text-sm">Live Status: Section 8 Approved & HUD Compliant</span>
-                    </div>
                 </div>
             </div>
         </section>
