--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | Properties 4 Creations</title>
+    <meta name="description" content="Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium renovations, and community impact.">
     <link rel="stylesheet" href="css/design-tokens.css">
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/main.css">
@@ -17,15 +18,17 @@
     </script>
 </head>
 <body class="bg-brand-beige">
-    <div id="header-container"></div>
-
+    <!-- Accessibility: Skip to main content -->
+    <a href="#main" class="skip-to-content">Skip to main content</a>
     <main class="pt-2">
-        <section class="page-title-banner">
-            <div class="max-w-6xl mx-auto px-4">
-                <h1>Get in Touch</h1>
-                <div class="mt-6 max-w-3xl mx-auto">
-                    <p class="text-lg md:text-xl text-slate-200 leading-relaxed">
-                        We are here to help veterans and sellers alike.
+        <section class="page-title-banner hero">
+            <div class="banner-content">
+                <div class="max-w-6xl mx-auto px-4 text-center">
+                    <h1 class="text-4xl md:text-5xl font-heading font-bold text-white drop-shadow-lg">
+                        Get in Touch <span class="block text-brand-wood">We're Here to Help</span>
+                    </h1>
+                    <p class="text-lg text-slate-200 leading-relaxed mt-6 max-w-3xl mx-auto">
+                        We're here to help East Texas veterans, families, and property sellers. Reach out for fair offers, housing support, or renovation questions. Veteran-owned, veteran-focused.
                     </p>
                 </div>
             </div>
