--- a/footer-template.html
+++ b/footer-template.html
@@ -11,7 +11,7 @@
                     <h3 class="text-2xl font-bold">Properties 4 Creations</h3>
                 </div>
                 <p class="text-slate-300 mb-6">
-                    Expert renovations and fair housing solutions for veterans. Transparent pricing, quality workmanship, nationwide service.
+                    Expert renovations and fair housing solutions for families and veterans. Transparent pricing, quality workmanship, nationwide service.
                 </p>
                 <div class="space-y-3">
                     <div class="flex items-center text-slate-300">
