--- a/header-template.html
+++ b/header-template.html
@@ -36,7 +36,7 @@
 
                 <!-- CTA Button -->
                 <a href="get-started.html" class="bg-gradient-to-r from-red-500 to-red-600 text-white px-6 py-3 rounded-lg font-semibold text-sm hover:shadow-2xl hover:scale-105 transition-all duration-300 hover:shadow-red-500/25">
-                    Get Fair Offer
+                    Browse Affordable Homes for Families & Veterans
                 </a>
             </nav>
 
@@ -69,7 +69,7 @@
                 </button>
 
                 <a href="get-started.html" class="block w-full text-center bg-gradient-to-r from-red-500 to-red-600 hover:from-red-600 hover:to-red-700 text-white px-4 py-3 rounded-lg font-medium transition-all duration-200 hover:shadow-lg mt-4">
-                    Get Fair Offer
+                    Browse Affordable Homes for Families & Veterans
                 </a>
             </div>
         </div>
