--- a/projects/tyler-ranch-home.html
+++ b/projects/tyler-ranch-home.html
@@ -38,6 +38,10 @@
         "value": 1.5,
         "unitCode": "AC"
       },
+      "image": [
+        "https://properties4creations.com/public/images/projects_finished_wood_deck.jpg",
+        "https://properties4creations.com/public/images/projects_before_wood_deck.jpg"
+      ],
       "amenityFeature": [
         {
           "@type": "LocationFeatureSpecification",
@@ -57,6 +61,11 @@
         {
           "@type": "LocationFeatureSpecification",
           "name": "Hardwood Floors",
+          "value": true
+        },
+        {
+          "@type": "LocationFeatureSpecification",
+          "name": "Families Welcome",
           "value": true
         }
       ],
@@ -320,59 +329,31 @@
 
                         <form
                             id="property-inquiry"
-                            action="https://formspree.io/p/WP%#$%^$#/7JJKQkI"
+                            action="https://formspree.io/f/YOUR_FORM_ID"
                             method="POST"
                             class="space-y-6"
                             novalidate>
 
-                            <input type="hidden" name="_subject" value="Lead: Tyler Ranch Home">
-                            <input type="hidden" name="_next" value="../thank-you.html">
+                    <input type="hidden" name="_subject" value="Lead: Tyler Ranch Home">
+                    <input type="hidden" name="_next" value="thank-you.html">
 
-                            <div>
-                                <label class="block text-sm font-medium text-slate-700 mb-1">Full Name</label>
-                                <input type="text" required class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-brand-sage focus:border-transparent">
-                            </div>
+                    <label class="block text-sm font-medium text-slate-700 mb-1">Full Name</label>
+                    <input type="text" name="name" required class="input-base">
 
-                            <div>
-                                <label class="block text-sm font-medium text-slate-700 mb-1">Email</label>
-                                <input type="email" required class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-brand-sage focus:border-transparent">
-                            </div>
+                    <label class="block text-sm font-medium text-slate-700 mb-1">Email</label>
+                    <input type="email" name="email" required class="input-base">
 
-                            <div>
-                                <label class="block text-sm font-medium text-slate-700 mb-1">Phone</label>
-                                <input type="tel" required class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-brand-sage focus:border-transparent">
-                            </div>
+                    <label class="block text-sm font-medium text-slate-700 mb-1">Phone</label>
+                    <input type="tel" name="phone" required class="input-base">
 
-                            <div>
-                                <label class="block text-sm font-medium text-slate-700 mb-1">Household Size</label>
-                                <select required class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-brand-sage focus:border-transparent">
-                                    <option value="">Select size</option>
-                                    <option value="1">1 person</option>
-                                    <option value="2">2 people</option>
-                                    <option value="3-4">3-4 people</option>
-                                    <option value="5+">5+ people</option>
-                                </select>
-                            </div>
+                    <div class="flex items-center">
+                        <input type="checkbox" id="veteran" name="veteran" class="mr-2">
+                        <label for="veteran" class="text-sm text-slate-700">U.S. Military Veteran</label>
+                    </div>
 
-                            <div>
-                                <label class="block text-sm font-medium text-slate-700 mb-1">When are you looking to move?</label>
-                                <select required class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-brand-sage focus:border-transparent">
-                                    <option value="">Select timing</option>
-                                    <option value="immediately">Immediately</option>
-                                    <option value="1-3months">1-3 months</option>
-                                    <option value="3-6months">3-6 months</option>
-                                    <option value="just-looking">Just looking</option>
-                                </select>
-                            </div>
-
-                            <div class="flex items-center">
-                                <input type="checkbox" id="veteran-checkbox" class="mr-2">
-                                <label for="veteran-checkbox" class="text-sm text-slate-700">U.S. Military Veteran</label>
-                            </div>
-
-                            <button type="submit" class="w-full bg-brand-navy text-white py-3 rounded-lg font-semibold hover:bg-brand-tan transition-colors">
-                                Request More Information
-                            </button>
+                    <button type="submit" class="btn-base btn-primary w-full rounded-lg py-3">
+                        Request Affordable Housing Tour
+                    </button>
                         </form>
 
                         <div class="mt-6 p-4 bg-green-50 border border-green-200 rounded-lg">
@@ -577,7 +558,7 @@
                 </div>
 
                 <div class="text-center mt-8">
-                    <a href="../projects.html" class="px-6 py-3 bg-brand-navy text-white rounded-lg font-semibold hover:bg-brand-tan transition-colors">
+                    <a href="../projects.html" class="btn-secondary">
                         View All East Texas Properties
                     </a>
                 </div>
