--- a/terms.html
+++ b/terms.html
@@ -41,6 +41,8 @@
     </script>
 </head>
 <body class="bg-brand-beige">
+    <!-- Accessibility: Skip to main content -->
+    <a href="#main" class="skip-to-content">Skip to main content</a>
     <!-- Header -->
     <div id="header-container"></div>
 
