--- a/projects/jefferson-riverfront.html
+++ b/projects/jefferson-riverfront.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jefferson Riverfront - Bayou Living at Big Cypress | Properties 4 Creation</title>
     <link rel="canonical" href="https://properties4creations.com/projects/jefferson-riverfront.html">
-    <meta name="description" content="Charming 2BR cabin-style home on Big Cypress Bayou in historic Jefferson. Waterfront living with Section 8 eligibility and waterfront recreation access.">
+    <meta name="description" content="Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium renovations, and community impact.">
 
     <!-- Structured Data for Property Listing -->
     <script type="application/ld+json">
@@ -88,7 +88,7 @@
       "publisher": {
         "@type": "RealEstateAgent",
         "name": "Properties 4 Creation",
-        "telephone": "(903) 866-0000",
+        "telephone": "(903) 647-0000",
         "address": {
           "@type": "PostalAddress",
           "addressLocality": "Jefferson",
@@ -162,7 +162,7 @@
                                 <h3 class="text-2xl font-bold mb-2">Waterfront Virtual Tour</h3>
                                 <p class="text-slate-300">Experience bayou living on Big Cypress</p>
                                 <button class="mt-4 px-6 py-3 bg-brand-sage text-white rounded-lg font-semibold hover:bg-brand-olive transition-colors">
-                                    Schedule Waterfront Tour
+                                    Request Affordable Housing Tour
                                 </button>
                             </div>
                         </div>
@@ -548,3 +548,4 @@
     </script>
 </body>
 </html>
+
