--- a/projects/longview-victorian.html
+++ b/projects/longview-victorian.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Longview Victorian - Historic Home with Modern Comforts | Properties 4 Creation</title>
     <link rel="canonical" href="https://properties4creations.com/projects/longview-victorian.html">
-    <meta name="description" content="Beautiful historic Victorian home in Downtown Longview with modern renovations. Section 8 eligible, family-friendly with excellent Gregg County schools.">
+    <meta name="description" content="Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium renovations, and community impact.">
 
     <!-- Structured Data for Property Listing -->
     <script type="application/ld+json">
@@ -88,7 +88,7 @@
       "publisher": {
         "@type": "RealEstateAgent",
         "name": "Properties 4 Creation",
-        "telephone": "(903) 624-0000",
+        "telephone": "(903) 647-0000",
         "address": {
           "@type": "PostalAddress",
           "addressLocality": "Longview",
@@ -535,3 +535,4 @@
     </script>
 </body>
 </html>
+
