--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service | Properties 4 Creations</title>
-    <meta name="description" content="Terms of service for Properties 4 Creations - terms and conditions for using our housing services.">
+    <meta name="description" content="Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium renovations, and community impact.">
 
     <!-- Design System CSS (MUST be first) -->
     <link rel="stylesheet" href="css/design-tokens.css">
@@ -101,3 +101,4 @@
     <script src="accessibility-enhanced.js"></script>
 </body>
 </html>
+
