changes verteran focus to families & veterans

--- a/about.html
+++ b/about.html
@@ -44,12 +44,12 @@
 <script type="application/json" id="page-banner-config">
 {
   "variant": "hero",
-  "title": "Our Mission: Homes for Heroes",
-  "subtitle": "From service to stability, we honor veterans with premium renovations and fair pricing. Every home tells the story of those who served.",
+  "title": "Our Mission: Homes for Families & Heroes in East Texas",
+  "subtitle": "From service to stability, we honor families and veterans with premium renovations and fair pricing. Every home tells the story of those who served.",
   "background": "public/images/hero/front_porch_hero.webp",
   "eyebrow": "Veteran Founded, Veteran Focused",
   "showVoucherBadge": true,
-  "ctaText": "See Our Impact",
+  "ctaText": "Explore Our Impact",
   "ctaHref": "impact.html"
 }
 </script>
@@ -86,7 +86,7 @@
                     <div class="bg-white p-8 rounded-2xl shadow-medium border-b-4 border-brand-navy relative group hover:-translate-y-2 transition-transform">
                         <div class="absolute -top-6 left-1/2 -translate-x-1/2 w-12 h-12 bg-brand-wood text-white rounded-full flex items-center justify-center font-bold text-xl border-4 border-brand-beige">3</div>
                         <div class="mt-6 text-center">
-                            <h3 class="text-xl font-bold text-brand-navy mb-3">Veteran Sanctuary</h3>
+                            <h3 class="text-xl font-bold text-brand-navy mb-3">Family & Veteran Sanctuary</h3>
                             <p class="text-secondary text-sm leading-relaxed">
                                 The home is placed into our network, offering a dignified, affordable living space for a veteran family to rebuild their future.
                             </p>
