--- a/get-started.html
+++ b/get-started.html
@@ -165,7 +165,7 @@
   "background": "public/images/banners/hero-get-started-banner.webp",
   "eyebrow": "Fair Cash • No Fees • Veteran Impact",
   "showVoucherBadge": true,
-  "ctaText": "Get Your Cash Offer",
+  "ctaText": "Get Cash Offer",
   "ctaHref": "#impact-form"
 }
 </script>
@@ -205,7 +205,7 @@
                     <!-- Step 3 -->
                     <div class="flow-node p-6 rounded-xl text-center">
                         <div class="w-16 h-16 bg-blue-500 rounded-full flex items-center justify-center text-white text-2xl font-bold mx-auto mb-4">🇺🇸</div>
-                        <h3 class="text-xl font-bold text-brand-navy mb-3">Veteran Sanctuary</h3>
+                    <h3 class="text-xl font-bold text-brand-navy mb-3">Family & Veteran Sanctuary</h3>
                         <p class="text-slate-600 mb-4">Section 8 ready homes for veteran families</p>
                         <div class="text-2xl mb-2">🏡</div>
                         <div class="text-brand-wood font-bold">Safe & Comfortable</div>
