--- a/privacy.html
+++ b/privacy.html
@@ -54,7 +54,7 @@
 {
   "variant": "hero",
   "title": "Privacy Policy",
-  "subtitle": "How we collect, use, and protect your personal information with complete transparency.",
+  "subtitle": "How we collect, use, and protect your personal information when providing housing support for families and veterans.",
   "background": "public/images/banners/hero-privacy-banner.webp",
   "eyebrow": "Data Privacy",
   "showVoucherBadge": false,
