--- a/projects.html
+++ b/projects.html
@@ -37,11 +37,11 @@
 {
   "variant": "hero",
   "title": "Transforming Properties into Homes",
-  "subtitle": "Explore our East Texas property portfolio — from historic renovations to modern updates, all designed for families and veterans.",
+  "subtitle": "Explore our East Texas property portfolio — all designed for families and veterans.",
   "background": "public/images/banners/hero-projects-banner.webp",
   "eyebrow": "40+ Properties Renovated",
   "showVoucherBadge": false,
-  "ctaText": "View Available Properties",
+  "ctaText": "Browse Properties",
   "ctaHref": "get-started.html"
 }
 </script>
