--- a/projects/tyler-ranch-home.html
+++ b/projects/tyler-ranch-home.html
@@ -88,7 +88,7 @@
       "publisher": {
         "@type": "RealEstateAgent",
         "name": "Properties 4 Creation",
-        "telephone": "(903) 647-0000",
+        "telephone": "(903) 283-1770",
         "address": {
           "@type": "PostalAddress",
           "addressLocality": "Tyler",
@@ -160,7 +160,7 @@
   "background": "public/images/hero/front_porch_hero.webp",
   "eyebrow": "HUD-VASH & Section 8 Approved",
   "showVoucherBadge": true,
-  "ctaText": "Browse Affordable Homes for Families & Veterans",
+  "ctaText": "Browse Homes for Families & Veterans",
   "ctaHref": "get-started.html"
 }
 </script>
@@ -383,8 +383,8 @@
 
                         <div class="mt-4 text-center">
                             <p class="text-sm text-slate-600">Call for immediate assistance</p>
-                            <a href="tel:+19036470000" class="text-brand-navy font-semibold hover:text-brand-tan">
-                                (903) 647-0000
+                            <a href="tel:+19032831770" class="text-brand-navy font-semibold hover:text-brand-tan">
+                                (903) 283-1770
                             </a>
                         </div>
                     </div>
@@ -622,5 +622,3 @@
 <script src="js/banner-loader.js" defer></script>
 </body>
             if (window.P4C && window.P4C.init) {
-
-
