--- a/thank-you.html
+++ b/thank-you.html
@@ -90,10 +90,10 @@
 
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
                     <a href="projects.html" class="wood-gradient-button px-8 py-4 rounded-xl font-semibold shadow-wood hover:shadow-xl transition-all">
-                        Browse Available Properties
+                        Browse Properties
                     </a>
                     <a href="contact.html" class="px-8 py-4 border-2 border-brand-navy text-brand-navy hover:bg-brand-navy hover:text-white rounded-xl font-semibold transition-all">
-                        Browse Affordable Homes for Families & Veterans
+                        Browse Homes for Families & Veterans
                     </a>
                 </div>
             </div>
@@ -108,4 +108,3 @@
     <script src="accessibility-enhanced.js"></script>
 </body>
 </html>
-
