--- a/projects/jefferson-riverfront.html
+++ b/projects/jefferson-riverfront.html
@@ -160,7 +160,7 @@
   "background": "public/images/hero/front_porch_hero.webp",
   "eyebrow": "HUD-VASH & Section 8 Approved",
   "showVoucherBadge": true,
-  "ctaText": "Browse Affordable Homes for Families & Veterans",
+  "ctaText": "Browse Homes for Families & Veterans",
   "ctaHref": "get-started.html"
 }
 </script>
@@ -328,8 +328,8 @@
 
                         <div class="mt-4 text-center">
                             <p class="text-sm text-slate-600">Call for immediate assistance</p>
-                            <a href="tel:+19038660000" class="text-brand-navy font-semibold hover:text-brand-tan">
-                                (903) 866-0000
+                            <a href="tel:+19032231771" class="text-brand-navy font-semibold hover:text-brand-tan">
+                                (903) 223-1770
                             </a>
                         </div>
                     </div>
@@ -565,5 +565,3 @@
 <script src="js/banner-loader.js" defer></script>
 </body>
 </html>
-
-
