--- a/resources.html
+++ b/resources.html
@@ -47,7 +47,7 @@
 {
   "variant": "hero",
   "title": "Housing Support Resources",
-  "subtitle": "Complete guide to veteran housing programs, Section 8 vouchers, and East Texas housing assistance. Navigate the system with confidence.",
+  "subtitle": "Complete guide to housing programs for families and veterans, Section 8 vouchers, and East Texas housing assistance. Navigate the system with confidence.",
   "background": "public/images/banners/hero-resources-banner.png",
   "eyebrow": "Housing Assistance Guide",
   "showVoucherBadge": false,
@@ -216,7 +216,7 @@
                     <p class="text-lg text-slate-600 max-w-3xl mx-auto">Connect with local organizations that provide housing assistance, counseling, and support services in East Texas.</p>
                 </div>
 
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="bg-white p-8 rounded-2xl shadow-lg border-l-4 border-brand-wood">
                         <h3 class="text-2xl font-bold text-brand-navy mb-4">East Texas Section 8</h3>
                         <p class="text-slate-700 mb-4">Apply for Section 8 vouchers through your local Public Housing Authority. Priority is given to veterans, homeless individuals, and families.</p>
@@ -271,6 +271,38 @@
 
                         <div class="mt-6">
                             <a href="contact.html" class="btn-primary">Get Personalized Help</a>
+                        </div>
+                    </div>
+
+                    <div class="bg-white p-8 rounded-2xl shadow-lg border-l-4 border-brand-wood">
+                        <h3 class="text-2xl font-bold text-brand-navy mb-4">Family Support Programs</h3>
+                        <p class="text-slate-700 mb-4">East Texas resources specifically designed to support families with housing assistance, childcare, and financial stabilization.</p>
+
+                        <div class="space-y-4">
+                            <div class="border border-slate-200 rounded-lg p-4">
+                                <h4 class="font-bold text-brand-navy mb-2">Family Promise of East Texas</h4>
+                                <p class="text-sm text-slate-600 mb-2">Emergency shelter and support services for homeless families</p>
+                                <p class="text-sm text-slate-600"><strong>Phone:</strong> (903) 570-9999</p>
+                                <p class="text-sm text-slate-600"><strong>Website:</strong> familypromiseeasttexas.org</p>
+                            </div>
+
+                            <div class="border border-slate-200 rounded-lg p-4">
+                                <h4 class="font-bold text-brand-navy mb-2">East Texas Food Bank</h4>
+                                <p class="text-sm text-slate-600 mb-2">Emergency food assistance and family services</p>
+                                <p class="text-sm text-slate-600"><strong>Phone:</strong> (903) 561-1200</p>
+                                <p class="text-sm text-slate-600"><strong>Website:</strong> easttexasfoodbank.org</p>
+                            </div>
+
+                            <div class="border border-slate-200 rounded-lg p-4">
+                                <h4 class="font-bold text-brand-navy mb-2">United Way of Smith County</h4>
+                                <p class="text-sm text-slate-600 mb-2">Family resource center and housing assistance coordination</p>
+                                <p class="text-sm text-slate-600"><strong>Phone:</strong> (903) 581-5906</p>
+                                <p class="text-sm text-slate-600"><strong>Website:</strong> unitedwaysmithcounty.org</p>
+                            </div>
+                        </div>
+
+                        <div class="mt-6">
+                            <a href="https://www.benefits.gov/" class="btn-primary">Find Family Benefits</a>
                         </div>
                     </div>
                 </div>
