--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <script type="application/ld+json">
     {
-      "@context": "https://schema.org",
+        "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Properties 4 Creation",
       "url": "https://properties4creations.com",
@@ -24,7 +24,7 @@
         "@type": "Organization",
         "name": "Properties 4 Creation",
         "url": "https://properties4creations.com",
-        "logo": "https://properties4creations.com/public/images/logo/brand_logo.png",
+        "logo": "https://properties4creations.com/public/images/svg/logo.svg",
         "contactPoint": {
           "@type": "ContactPoint",
           "telephone": "+1-903-283-1770",
@@ -47,7 +47,7 @@
       "@type": "Organization",
       "name": "Properties 4 Creation",
       "url": "https://properties4creations.com",
-      "logo": "https://properties4creations.com/public/images/logo/brand_logo.png",
+      "logo": "https://properties4creations.com/public/images/svg/logo.svg",
       "description": "Affordable housing for families and veterans in East Texas. Section 8 eligible, professionally renovated, and community focused.",
       "foundingDate": "2023",
       "contactPoint": {
