dynamic updates and optimization for PWA Support

--- a/index.html
+++ b/index.html
@@ -102,40 +102,6 @@
     <noscript><link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"></noscript>
     <link rel="stylesheet" href="css/design-tokens.css">
 
-    <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        brand: {
-                            navy: 'var(--color-primary-navy)',   /* Deep Anchor Navy - Primary Background */
-                            wood: 'var(--color-accent-gold)',   /* Golden Oak - Primary Accent/Buttons */
-                            walnut: 'var(--color-secondary-walnut)', /* Darker Wood - Borders/Text */
-                            beige: 'var(--color-neutral-beige)',  /* Warm White - Section Backgrounds */
-                            surface: 'var(--color-neutral-white)', /* Card Backgrounds */
-                            slate: 'var(--color-neutral-slate-500)'   /* Body Text */
-                        },
-                        surface: {
-                            primary: 'var(--color-neutral-white)',
-                            secondary: 'var(--color-neutral-beige)',
-                            tertiary: 'var(--color-neutral-slate-100)'
-                        }
-                    },
-                    fontFamily: {
-                        heading: ['Merriweather', 'serif'],
-                        body: ['Inter', 'sans-serif']
-                    },
-                    boxShadow: {
-                        'wood': 'var(--shadow-wood)',
-                        'navy': 'var(--shadow-medium)',
-                    }
-                }
-            }
-        }
-    </script>
-
     <!-- Leaflet CSS for Maps -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
@@ -234,7 +200,7 @@
             50% { transform: translateY(-10px); }
         }
     </style>
-    <link rel="stylesheet" href="css/main.css" media="print" onload="this.media='all'; this.onload=null;">
+    <link rel="stylesheet" href="css/main.min.css" media="print" onload="this.media='all'; this.onload=null;">
 
     <!-- Google Analytics GA4 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
@@ -261,7 +227,7 @@
   "variant": "hero",
   "title": "Affordable Homes for Families & Veterans in East Texas",
   "subtitle": "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust, and local pride.",
-  "background": "public/images/hero/front_porch_hero.webp",
+  "background": "public/videos/hero-banner.mp4",
   "eyebrow": "HUD-VASH & Section 8 Approved",
       "showVoucherBadge": true,
       "ctaText": "Browse Homes for Families & Veterans",
@@ -372,22 +338,7 @@
 
 
 
-    <!-- Interactive JavaScript Libraries - Bundled for Performance -->
-    
-    <!-- Performance Optimization - Lazy loading and image optimization -->
-    <script src="performance-optimization.js" defer></script>
-    
-    <!-- Component Loader - Dynamically loads header and footer -->
-    <script src="components/component-loader.js"></script>
-
-    <!-- Banner Loader - Dynamically loads page banners -->
-    <script src="js/banner-loader.js" defer></script>
-
-    <!-- Accessibility Enhancements - Keyboard navigation and focus management -->
-    <script src="accessibility-enhanced.js"></script>
+    <!-- Bundled JavaScript -->
+    <script src="js/bundle.min.js" defer></script>
 </body>
 </html>
-
-
-
-
