--- a/transparency.html
+++ b/transparency.html
@@ -176,7 +176,7 @@
                     <h2 class="text-3xl md:text-4xl font-heading font-bold text-brand-navy mt-2 mb-4">Premium Renovation Checklist</h2>
                     <p class="text-lg text-slate-600 max-w-3xl mx-auto">
                         Every property undergoes detailed renovations following our comprehensive standards.
-                        Here's exactly what we guarantee in every P4C home.
+                        Here's exactly what we guarantee in every Properties 4 Creations home.
                     </p>
                 </div>
 
@@ -359,7 +359,7 @@
             <div class="max-w-6xl mx-auto px-4">
                 <div class="text-center mb-16">
                     <span class="text-brand-walnut font-bold tracking-wider uppercase text-sm">Trust Signals</span>
-                    <h2 class="text-3xl md:text-4xl font-heading font-bold text-brand-navy mt-2 mb-4">Why Veterans Choose P4C</h2>
+                    <h2 class="text-3xl md:text-4xl font-heading font-bold text-brand-navy mt-2 mb-4">Why Veterans Choose Properties 4 Creations</h2>
                     <p class="text-lg text-slate-600 max-w-3xl mx-auto">
                         We've earned the trust of over 120 veterans and their families through transparency,
                         quality, and genuine commitment to veteran housing solutions.
@@ -419,7 +419,7 @@
                     Ready for a Safe, Beautiful Home?
                 </h2>
                 <p class="text-lg text-slate-300 mb-8">
-                    Every P4C property comes with our complete renovation standards guarantee.
+                    Every Properties 4 Creations property comes with our complete renovation standards guarantee.
                     Tour one of our properties and see the difference quality and transparency make.
                 </p>
 
