--- a/about.html
+++ b/about.html
@@ -8,34 +8,7 @@
     <link rel="canonical" href="https://properties4creations.com/about.html">
     <link rel="stylesheet" href="css/design-tokens.css">
     <link rel="stylesheet" href="css/components.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        brand: {
-                            navy: 'var(--color-primary-navy)',
-                            wood: 'var(--color-accent-gold)',
-                            walnut: 'var(--color-secondary-walnut)',
-                            beige: 'var(--color-neutral-beige)',
-                            surface: 'var(--color-neutral-white)',
-                            slate: 'var(--color-neutral-slate-500)'
-                        }
-                    },
-                    fontFamily: {
-                        heading: ['Merriweather','serif'],
-                        body: ['Inter','sans-serif']
-                    },
-                    boxShadow: {
-                        wood: 'var(--shadow-wood)',
-                        navy: 'var(--shadow-medium)'
-                    }
-                }
-            }
-        }
-    </script>
+    <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body class="bg-brand-beige">
     <!-- Accessibility: Skip to main content -->
@@ -108,12 +81,6 @@
     </main>
 
     <div id="footer-container"></div>
-    <script src="components/component-loader.js"></script>
-    <script src="accessibility-enhanced.js"></script>
-    <script src="js/banner-loader.js" defer></script>
+    <script src="js/bundle.min.js" defer></script>
 </body>
 </html>
-
-
-
-
